[gd_scene load_steps=11 format=2]

[ext_resource path="res://Flashback_scene/Flashback.gd" type="Script" id=1]
[ext_resource path="res://Flashback_scene/Flackback_pics/bg_sprites.png" type="Texture" id=2]
[ext_resource path="res://Flashback_scene/Flashback_sounds/Flashback.wav" type="AudioStream" id=3]
[ext_resource path="res://Flashback_scene/Flashback_sounds/Contemplation.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../flashback_bg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "bg_anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../flashback_bg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 5, 3 ]
}

[sub_resource type="Animation" id=1]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Flashback" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flashback_bg" type="Sprite" parent="."]
position = Vector2( 80, 70 )
texture = ExtResource( 2 )
hframes = 6

[node name="flashback_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="contemplation" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="bg_anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../transition2")
anims/RESET = SubResource( 5 )
anims/bg_anim = SubResource( 6 )

[node name="transition" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
anims/RESET = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="transition2" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
anims/RESET = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
